# Face_Detector

./: .gitignore  .gitmodules  README.md  linux_install.sh  mac_install.sh
include/: DNNFaceDetector.h
src/: CMakeLists.txt  DNNFaceDetector.cpp  main.cpp
